# ghost-pepper

./: .gitignore  README.md  gulpfile.js  nodemon.json  package.json
client/: .gitignore  CMakeLists.txt  client.c  client.h  index.html  webpack.config.js
client/html/: ghost-pepper.html  index.html
client/js/: ghost-pepper.js  main.js
client/less/: main.less
client/src/: colors.scss  icons.scss  main.js  routes.jsx  theme.js
client/src/components/: app.jsx  app.scss
client/src/components/header/: header.jsx  header.scss
client/src/components/pages/: page.jsx
client/src/components/pages/404/: 404.jsx  404.scss  index.jsx
client/src/components/pages/about/: about.scss  index.jsx
client/src/components/pages/home/: home.jsx  home.scss
client/src/components/pages/main/: index.jsx  main.scss
client/src/components/pages/main/canvas/: canvas.scss  index.jsx
client/src/components/pages/main/model-loader/: index.jsx  model-loader.scss
client/src/components/pages/models/: models.jsx
client/src/components/sidebar/: sidebar.jsx
client/src/flux/: action-creators.js  actions.js  emitters.js  reducer.js  reducers.js  store.js
client/src/flux/emitters/: index.js  tunnel.js
client/src/flux/nav/: action-creators.js  actions.js  emitter.js  reducer.js
client/src/loaders/: index.js  mtl-loader.js  obj-loader.js  obj-mtl-loader.js
client/src/mixins/: card.scss  title.js
client/src/services/helpers/: tunnel.js
client/src/util/: model.js  time.js  types.js
projector/: webpack.config.js
server/: hub.js  index.js  uploads-janitor.js
sips/: clean.js  (+3 more)
(+9 files in other folders)
