cmake_minimum_required(VERSION 3.3)

FIND_PACKAGE(OpenGL)
FIND_PACKAGE(GLUT)
IF ( MSVC )
  SET(M_LIB)
ELSE ( MSVC )
  find_library(M_LIB m)
ENDIF ( MSVC )

IF ( NOT GLUT_FOUND )
  MESSAGE( WARNING "Please install glut." )
ENDIF ( NOT GLUT_FOUND )

INCLUDE_DIRECTORIES(
  ${Assimp_INCLUDE_DIR}
  ${OPENGL_INCLUDE_DIR}
  ${GLUT_INCLUDE_DIR}
)

LINK_DIRECTORIES(
  ${Assimp_BINARY_DIR}
  ${Assimp_BINARY_DIR}/lib
)

ADD_EXECUTABLE(
  gp-client
  client.c
)

SET_PROPERTY(TARGET gp-client PROPERTY DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})

TARGET_LINK_LIBRARIES( gp-client assimp ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} ${M_LIB} )
SET_TARGET_PROPERTIES( gp-client PROPERTIES
  OUTPUT_NAME gp-client
)